tests/ui/error-codes/E0412.rs
impl Something {} //~ ERROR E0412

fn main() {
}
